# tinyvanityeth

./: Cargo.toml  README.md  TODO.md
.github/workflows/: build.yml
benches/: checksum.rs  hex.rs
src/: main.rs
